Implementation of provenance and formal data ids

--- a/.env-local
+++ b/.env-local
@@ -2,3 +2,10 @@
 BOOTSTRAP_SERVERS="localhost:9092"
 SCHEMA_REGISTRY_URL="http://localhost:8081"
 AVRO_SCHEMAS_ROOT="${CWD}/avro_schemas"
+WEB_ROOT="/tmp/webroot"
+
+POSTGRES_DB=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=8432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
