--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ channels
 confluent-kafka[avro]
 Django>=3,<4
 django-appconf
+django-compressor
 django-crispy-forms
+django-libsass
 django-prometheus
 django-vouch-proxy-auth
 gevent
