--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ avro
 channels
 confluent-kafka[avro]
 Django>=3,<4
+django-compressor
 django-crispy-forms
+django-libsass
 django-prometheus
 django-vouch-proxy-auth
 gevent
